--- a/_posts/2017-11-23-fraude-21D.md
+++ b/_posts/2017-11-23-fraude-21D.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Disseny de Cartell
+title: Indra - 21D Fraude anunciado
 post: default
 comments: true
-category: treballs
-img: "assets/print/foto1.jpg"
+category: notícias
+id: K1SUgCfiClQ
 excerpt_separator: <!--more-->
 ---
 
