--- a/_posts/2017-11-23-fraude-21D.md
+++ b/_posts/2017-11-23-fraude-21D.md
@@ -4,7 +4,7 @@ title: Indra - 21D Fraude anunciado
 post: default
 comments: true
 category: notícias
-id: "https://i1.ytimg.com/vi/K1SUgCfiClQ/maxresdefault.jpg"
+img: K1SUgCfiClQ
 excerpt_separator: <!--more-->
 ---
 
