--- a/_posts/2017-11-23-fraude-21D.md
+++ b/_posts/2017-11-23-fraude-21D.md
@@ -8,25 +8,24 @@ img: K1SUgCfiClQ
 excerpt_separator: <!--more-->
 ---
 
-Cartell i imatge gràfica per a Cristian Segura.
+INDRA y el 21D
 
-Concert realitzat el Dissabte 30 de Setembre 2017.
-
+Creemos que el 21 de Diciembre de 2017 habrá FRAUDE en las elecciones autonómicas de Catalunya.
 
 
 <!--more-->
 
 
-<figure>
-	<a href="../assets/print/foto1.jpg" data-lightbox="roadtrip"><img src="../assets/print/foto1.jpg"></a>
-</figure>
+Hemos estado investigando sobre Indra y su pasado mas que turbio.
 
----
+A continuación realizaremos n análisis en directo sobre la situación en Catalunya después de la aplicación del 155 por parte de Mariano Rajoy.
 
-**CLIENT:** Cristian Segura
+Unas elecciones muy especiales. Recordemos que hay cargos electos en prisión.
 
-**AUTOR:** Isard Miralles
+Allá vamos.
 
-**ANY:** 2017
 
-**APP:** Photoshop CC
+FRAUDE ELECTORAL ANUNCIADO EN CATALUNYA
+
+
+##### SI COMENTAS, COMPARTES Y LE DAS AL LIKE UN GENIO MÁGICO DEL YOUTUBE TE CONCEDERÁ UN DESEO.
