--- a/_posts/2017-11-23-fraude-21D.md
+++ b/_posts/2017-11-23-fraude-21D.md
@@ -16,16 +16,17 @@ Creemos que el 21 de Diciembre de 2017 habrá FRAUDE en las elecciones autonómi
 <!--more-->
 
 
-Hemos estado investigando sobre Indra y su pasado mas que turbio.
+###### Hemos estado investigando sobre Indra y su pasado mas que turbio.
 
-A continuación realizaremos n análisis en directo sobre la situación en Catalunya después de la aplicación del 155 por parte de Mariano Rajoy.
+###### A continuación realizaremos n análisis en directo sobre la situación en Catalunya después de la aplicación del 155 por parte de Mariano Rajoy.
 
-Unas elecciones muy especiales. Recordemos que hay cargos electos en prisión.
+###### Unas elecciones muy especiales. Recordemos que hay cargos electos en prisión.
 
-Allá vamos.
+###### Allá vamos.
 
 
-FRAUDE ELECTORAL ANUNCIADO EN CATALUNYA
+###### FRAUDE ELECTORAL ANUNCIADO EN CATALUNYA
+
 
 
 ##### SI COMENTAS, COMPARTES Y LE DAS AL LIKE UN GENIO MÁGICO DEL YOUTUBE TE CONCEDERÁ UN DESEO.
