--- a/_posts/2017-12-21-star-wars-8.md
+++ b/_posts/2017-12-21-star-wars-8.md
@@ -4,6 +4,7 @@ title: Star Wars 8 - Fan Review
 post: default
 comments: true
 category: cine
+categories: cine "star wars 8" pelicula fan review "the last jedi" ver online film videos manguis youtuber youtube 
 img: 4WaeDWI&UnderBar;Yx4
 excerpt_separator: <!--more-->
 ---
