--- a/_posts/2017-11-23-fraude-21D.md
+++ b/_posts/2017-11-23-fraude-21D.md
@@ -4,7 +4,7 @@ title: Indra - 21D Fraude anunciado
 post: default
 comments: true
 category: notícias
-tags: notícias Indra fraude catalunya "fraude anunciado" 
+tags: notícias Indra fraude catalunya fraude anunciado 
 img: K1SUgCfiClQ
 excerpt_separator: <!--more-->
 ---
