--- a/_posts/2017-10-23-blade-runner-2049.md
+++ b/_posts/2017-10-23-blade-runner-2049.md
@@ -1,38 +1,26 @@
 ---
 layout: post
-title: ¿Que pasa con los PENES de los animales que nos comemos?
+title: Blade Runner 2049
 post: default
 comments: true
-category: humor
-tags: penes animales youtuber youtubers divertido humor videos gracioso
-img: Gz730L6-U8Q
+category: cine
+tags: [cine, blade runner, estrenos, youtuber, youtube]
+img: bitN7pPdI&UnderBar;4
 excerpt_separator: <!--more-->
+
 ---
 
-¿QUe pasa con ésos penes? ¿Tu te los comes? ¿A donde van?
+Blade Runner 2049. La hemos visto.
 
-¿Nos los comemos sin saberlo? ¿Tienen gluten?
-
-Con tacto, o sin tacto, pero lo vamos a hacer igual...
+Vamos a hablar de la película,
 
 <!--more-->
 
 
-###### Es el cumple de un colega, y lo vamos a celebrar.
+###### Vamos a hablar de la película, con algún spoiler, crítica desde el corazón y con mucho amor por ésta saga mítica que marcó una época.
 
-###### Os podeis unir a la fiesta.
+###### La primera la vimos de niños nosotros.
 
+###### Vamos a contaros como lo vivimos ahora que por fin se han atrevido a seguir con la secuela.
 
-###### Felicitar-le el día al colega que necesita cariño.
-
-###### Será... ...improvisada, pero serà, que es mejor que no que no sea.
-
-###### Ser o no ser...
-
-###### Te planteas muchas cosas cuando celebras un cumple...
-
-###### Venir, pasar y felicitar-le el día al colega que es gratis y te enviamos un jamón.
-
-#### Jamón Catalán.
-
-##### No hacemos boicots aquí.
+##### No mata, pero mejor seguir vivo, la verdad...
