--- a/_posts/2017-12-18-star-wars-8.md
+++ b/_posts/2017-12-18-star-wars-8.md
@@ -4,7 +4,7 @@ title: Star Wars 8 - Fan Review
 post: default
 comments: true
 category: cine
-tags: [cine, youtuber, youtube]
+tags: [cine, youtuber, youtube, estrenos, star wars,]
 img: 4WaeDWI&UnderBar;Yx4
 excerpt_separator: <!--more-->
 ---
