--- a/_posts/2017-12-6-fraude-21D.md
+++ b/_posts/2017-12-6-fraude-21D.md
@@ -3,8 +3,8 @@ layout: post
 title: Indra - 21D Fraude anunciado
 post: default
 comments: true
-category: notícias
-tags: notícias Indra fraude catalunya fraude anunciado 
+category: noticias
+tags: politica Indra fraude catalunya fraude anunciado 
 img: K1SUgCfiClQ
 excerpt_separator: <!--more-->
 ---
