--- a/_posts/2017-8-19-7x06-mas-alla-de.md
+++ b/_posts/2017-8-19-7x06-mas-alla-de.md
@@ -4,7 +4,7 @@ title: 7x06 Más allá del muro
 post: default
 comments: true
 category: series
-tags: [7x06, juego de tronos, game of thrones, series, review]
+tags: [juego de tronos, game of thrones, series, review]
 img: ru7XitTfRY0
 excerpt_separator: <!--more-->
 ---
