--- a/_posts/2017-4-18-la-nasa.md
+++ b/_posts/2017-4-18-la-nasa.md
@@ -5,7 +5,7 @@ post: default
 comments: true
 category: noticias
 tags: nasa youtuber divertido humor videos gracioso
-img: wsB1K4EPy&UnderBar;Y
+img: wsB1K4EPy-Y
 excerpt_separator: <!--more-->
 ---
 
