--- a/_posts/2016-1-4-tetas-y-7000-subs.md
+++ b/_posts/2016-1-4-tetas-y-7000-subs.md
@@ -5,7 +5,7 @@ post: default
 comments: true
 category: humor
 tags: [tetas, youtuber, divertido, humor, videos, parodia, gracioso, especial]
-img: Xmj4C8Ul6F8
+img: 3mgwVwndRoE
 excerpt_separator: <!--more-->
 ---
 
