--- a/_posts/2016-1-4-tetas-y-7000-subs.md
+++ b/_posts/2016-1-4-tetas-y-7000-subs.md
@@ -4,7 +4,7 @@ title: Tetas y 7000 Suscriptores
 post: default
 comments: true
 category: humor
-tags: [tetas, youtuber, divertido, humor, videos, parodia, gracioso, especial]
+tags: [tetas, youtuber, divertido, humor, parodia, gracioso, especial]
 img: 3mgwVwndRoE
 excerpt_separator: <!--more-->
 ---
