--- a/_posts/2017-4-18-la-nasa.md
+++ b/_posts/2017-4-18-la-nasa.md
@@ -4,7 +4,7 @@ title: La Nasa
 post: default
 comments: true
 category: noticias
-tags: nasa youtuber divertido humor videos gracioso
+tags: nasa youtuber divertido humor gracioso
 img: wsB1K4EPy-Y
 excerpt_separator: <!--more-->
 ---
