--- a/_posts/2015-12-5-gachupin-2.md
+++ b/_posts/2015-12-5-gachupin-2.md
@@ -4,7 +4,7 @@ title: Gachupín de la Selva 2
 post: default
 comments: true
 category: humor
-tags: [gachupin, youtuber, divertido, humor, videos, parodia, gracioso, especial]
+tags: [gachupin, youtuber, divertido, humor, parodia, gracioso, especial]
 img: cRAhfPe4bM0
 excerpt_separator: <!--more-->
 ---
