--- a/_posts/2017-12-18-star-wars-8.md
+++ b/_posts/2017-12-18-star-wars-8.md
@@ -3,6 +3,7 @@ layout: post
 title: Star Wars 8 - Fan Review
 post: default
 comments: true
+killnav: sticky-none
 category: cine
 tags: [cine, youtuber, youtube, estrenos, star wars,]
 img: 4WaeDWI&UnderBar;Yx4
