--- a/_posts/2016-1-4-tetas-y-7000-subs.md
+++ b/_posts/2016-1-4-tetas-y-7000-subs.md
@@ -3,6 +3,7 @@ layout: post
 title: Tetas y 7000 Suscriptores
 post: default
 comments: true
+killnav: sticky-none
 category: humor
 tags: [tetas, youtuber, divertido, humor, parodia, gracioso, especial]
 img: 3mgwVwndRoE
