--- a/_posts/2017-2-20-estrenos-2017.md
+++ b/_posts/2017-2-20-estrenos-2017.md
@@ -3,6 +3,7 @@ layout: post
 title: Estrenos 2017 y Harrison Ford
 post: default
 comments: true
+killnav: sticky-none
 category: cine
 tags: [cine, youtuber, youtube, estrenos, star wars, Harrison Ford]
 img: a2NhL8AHLNA
