--- a/_posts/2015-12-5-gachupin-2.md
+++ b/_posts/2015-12-5-gachupin-2.md
@@ -3,6 +3,7 @@ layout: post
 title: Gachupín de la Selva 2
 post: default
 comments: true
+killnav: sticky-none
 category: humor
 tags: [gachupin, youtuber, divertido, humor, parodia, gracioso, especial]
 img: cRAhfPe4bM0
