--- a/_posts/2017-4-18-la-nasa.md
+++ b/_posts/2017-4-18-la-nasa.md
@@ -3,6 +3,7 @@ layout: post
 title: La Nasa
 post: default
 comments: true
+killnav: sticky-none
 category: noticias
 tags: nasa youtuber divertido humor gracioso
 img: wsB1K4EPy-Y
