--- a/_posts/2017-12-18-star-wars-8.md
+++ b/_posts/2017-12-18-star-wars-8.md
@@ -15,12 +15,15 @@ Menudo montón de cosas tenemos para hablar, esperamos que podamos terminar el e
 
 <!--more-->
 
+<hr>
 
 Empezaremos por el principio y no nos vamos a dejar nada.
 
 Que si lo de Snoke, lo de Leia, los huevos de Poe, las tetas de bicho que saca leche verde y, como no, el palo de escoba.
 
 y más...
+
+<hr>
 
 Hay cosas que nos han molado un montón y otras que tal vez no tanto.
 
@@ -36,8 +39,10 @@ Y después de verla queda bastante claro.
 
 Palo de escoba compañeros.
 
+<hr>
+
 ##### PALO de ESCOBA!
 
-###### Star Wars 8
+Star Wars 8 - Los Últimos Jedi
 
-###### Vamos allá
+Vamos allá
