--- a/_posts/2017-12-6-fraude-21D.md
+++ b/_posts/2017-12-6-fraude-21D.md
@@ -16,18 +16,19 @@ Creemos que el 21 de Diciembre de 2017 habrá FRAUDE en las elecciones autonómi
 
 <!--more-->
 
+<hr>
 
-###### Hemos estado investigando sobre Indra y su pasado mas que turbio.
+Hemos estado investigando sobre Indra y su pasado mas que turbio.
 
-###### A continuación realizaremos n análisis en directo sobre la situación en Catalunya después de la aplicación del 155 por parte de Mariano Rajoy.
+A continuación realizaremos n análisis en directo sobre la situación en Catalunya después de la aplicación del 155 por parte de Mariano Rajoy.
 
-###### Unas elecciones muy especiales. Recordemos que hay cargos electos en prisión.
+Unas elecciones muy especiales. Recordemos que hay cargos electos en prisión.
 
-###### Allá vamos.
-
-
-###### FRAUDE ELECTORAL ANUNCIADO EN CATALUNYA
+Allá vamos.
 
 
+FRAUDE ELECTORAL ANUNCIADO EN CATALUNYA
+
+<hr>
 
 ##### SI COMENTAS, COMPARTES Y LE DAS AL LIKE UN GENIO MÁGICO DEL YOUTUBE TE CONCEDERÁ UN DESEO.
