--- a/_posts/2017-8-19-7x06-mas-alla-de.md
+++ b/_posts/2017-8-19-7x06-mas-alla-de.md
@@ -19,12 +19,13 @@ Varias veces.
 
 <!--more-->
 
+<hr>
 
-###### Beyond the Wall - Capítulo 6 Séptima Temporada - s07e06
+Beyond the Wall - Capítulo 6 Séptima Temporada - s07e06
 
-###### Un capítulo prácticamente monopolizado por la expedición de Jon Snow al Norte del Muro para capturar a un caminante blanco vivo.
+Un capítulo prácticamente monopolizado por la expedición de Jon Snow al Norte del Muro para capturar a un caminante blanco vivo.
 
-###### Veremos mucha acción, bastantes diálogos interesantes entre los miembros de la expedición:
+Veremos mucha acción, bastantes diálogos interesantes entre los miembros de la expedición:
 
 #### - Jon Snow
 #### - Jorah Mormont
@@ -34,17 +35,25 @@ Varias veces.
 #### - Thoros de myr
 #### - Beric Dondarrion
 
-###### Además Sansa y Arya van a tener sus diferencias en Hivernalia. Meñique sigue manipulando a Sansa sin que ésta sea consciente.
+<hr>
 
-###### Jon y Daenerys acercarán posiciones pero de momento no habrá escena de cama para éstos dos protagonistas.
+Además Sansa y Arya van a tener sus diferencias en Hivernalia. Meñique sigue manipulando a Sansa sin que ésta sea consciente.
 
-###### Un capítulo trepidante. Con Dragones, fuego, Caminantes, el increíble Oso que ataca la expedición,...
+Jon y Daenerys acercarán posiciones pero de momento no habrá escena de cama para éstos dos protagonistas.
 
-###### Aunque con un final un poco amargo, éste capítulo nos deja expectantes y con muchísimas ganas de ver el cierre de Temporada que ya se nos está hechando encima.
+Un capítulo trepidante. Con Dragones, fuego, Caminantes, el increíble Oso que ataca la expedición,...
 
-###### Juego de Tronos 7x06 - Beyond the wall - Análisis
-###### MÁS ALLÁ DEL MURO - Capítulo 6 Séptima Temporada
+Aunque con un final un poco amargo, éste capítulo nos deja expectantes y con muchísimas ganas de ver el cierre de Temporada que ya se nos está hechando encima.
 
-##### Todo esto y mucho más en DIRECTO en unos momentos...
-###### ...si lo lees antes... ...o puedes volver al pasado...
-###### ...si puedes, ..que pasada, no? ¿Como lo haces?
+<hr>
+
+Juego de Tronos 7x06 - Beyond the wall - Análisis
+
+MÁS ALLÁ DEL MURO - Capítulo 6 Séptima Temporada
+
+
+Todo esto y mucho más en DIRECTO en unos momentos...
+
+...si lo lees antes... ...o puedes volver al pasado...
+
+...si puedes, ..que pasada, no? ¿Como lo haces?
